# ClassIsScore

./: .gitignore  App.axaml  App.axaml.cs  ClassIsScore.csproj  ClassIsScore.sln  LICENSE  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  README.md  security_best_practices_report.md  七（4）班3月份小组积分情况_20260613_204642.xls
ClassIsScore.Tests/: PluginCoreTests.cs  PluginServiceTests.cs  XamlThemeServiceTests.cs
Controls/: AdminVerifyDialog.axaml  AdminVerifyDialog.axaml.cs  PetDisplayControl.axaml  PetDisplayControl.axaml.cs  ScoreTrendChart.axaml  StudentCardControl.axaml  StudentCardControl.axaml.cs  StudentCircleControl.axaml  StudentCircleControl.axaml.cs
Converters/: RankConverters.cs
Helpers/: AppPaths.cs  FocusHelper.cs
Models/: AdminSettings.cs  AppState.cs  AutoEvaluationConfig.cs  BoolConverters.cs  FloatingWindowSettings.cs  ImportScoreResult.cs  IpcMessageReceivedEventArgs.cs  LeaderboardEntry.cs  PetSystem.cs  PetType.cs  PluginInfo.cs  PluginLoadedEventArgs.cs  PluginManifest.cs  ScoreChangedEventArgs.cs  ScoreRecord.cs  SettlementRecord.cs  Student.cs  StudentGroup.cs  ThemeManifest.cs
Services/: AppHost.cs  DataTransferService.cs  FloatingWindowService.cs  GroupService.cs  IpcService.cs  PluginService.cs  ScoreService.cs  SettlementService.cs  TrayIconService.cs  UriNavigationService.cs  XamlThemeService.cs
ViewModels/: AboutViewModel.cs  AdminSettingsViewModel.cs  GroupManagementViewModel.cs  OnboardingViewModel.cs  ScoreDisplayViewModel.cs  ScoreManagementViewModel.cs  SettingsViewModel.cs  SettlementViewModel.cs  StudentManagementViewModel.cs  StudentProfileViewModel.cs
Views/: FloatingWindow.axaml  FloatingWindow.axaml.cs
avalonia/: ClassIsScore.csproj  MainWindow.axaml.cs  app.manifest
client/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json  mobile.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: lib.rs  main.rs
client/src-tauri/src/commands/: app.rs  auth.rs  auth_settings_keys.rs  auto_score.rs  evaluation.rs  group.rs  leaderboard.rs  log.rs  mod.rs  plugin.rs  score.rs  server.rs  settings.rs  settlement.rs  student.rs  theme.rs
client/src-tauri/src/db/: connection.rs  migration.rs  mod.rs
client/src-tauri/src/db/entities/: admin_settings.rs  auto_evaluation_config.rs  evaluation_item.rs  mod.rs  score_record.rs  settlement_record.rs  student.rs  student_group.rs
client/src-tauri/src/platform/: desktop.rs  mobile.rs  mod.rs
client/src-tauri/src/server/: mod.rs
client/src-tauri/src/services/: crypto.rs  logger.rs  mod.rs  paths.rs
docs/: DEVELOPMENT.md  URI.md
server/: pom.xml
(+253 files in other folders)
