[package]
name = "classisscore"
version = "1.0.5.0"
description = "ClassIsScore - 教室积分管理系统"
authors = ["ClassIsScore Team"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "classisscore_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "1", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
sea-orm-migration = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
once_cell = "1"
parking_lot = "0.12"
axum = "0.7"
tower-http = { version = "0.6", features = ["cors"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
open = "5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
